# curve_extraction

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  groups  project.config
data/: CMakeLists.txt  wintertree.txt  wintertree1.pgm  wintertree2.pgm  wintertree3.pgm  wintertree4.pgm  wintertree5.pgm  wintertree_d1.pgm  wintertree_d2.pgm  wintertree_d3.pgm  wintertree_d4.pgm  wintertree_d5.pgm
examples/: CMakeLists.txt  curve_completion.cpp  demo_2d.cpp  demo_3d.cpp  racetrack.cpp  tree_reconstruction.cpp
include/curve_extraction/: curvature.h  data_term.h  google_test_compatibility.h  grid_mesh.h  mesh.h  shortest_path.h
include/vessel/: curvature.h  data_term.h  google_test_compatibility.h  grid_mesh.h  mesh.h  shortest_path.h
matlab/: Curve_extraction.m  Curve_extraction_base.m  Curve_extraction_edge.m  Geodesic_shortest_path.m  compile.m  constrained_optimization.m  draw_line.m  edge_test.m  explicit_dataterm.m  figure_6.m  geodesic_example.m  shortest_path_tree.m  simple_3D.m  unit_tests.m
matlab/examples/: constrained_optimization.m  explicit_dataterm.m  figure_6.m  geodesic_example.m  shortest_path_tree.m  simple_3D.m
source/: CMakeLists.txt  curvature.cpp  data_term.cpp  grid_mesh.cpp  mesh.cpp  shortest_path.cpp  trilinear.cpp
tests/: CMakeLists.txt  test_curvature.cpp  test_data_term.cpp  test_grid_mesh.cpp  test_indexed_heap.cpp  test_mesh.cpp  test_shortest_path.cpp  test_shortest_path_helper.h
