# Author: petter.strandmark@gmail.com (Petter Strandmark)

# Also depend on the header files so that they appear in IDEs.
FILE(GLOB CURVE_EXTRACTION_HEADERS *.h)

MACRO (CURVE_EXTRACTION_EXAMPLE NAME)
  ADD_EXECUTABLE(${NAME} ${NAME}.cpp)
  TARGET_LINK_LIBRARIES(${NAME} curve_extraction)
ENDMACRO (CURVE_EXTRACTION_EXAMPLE)

FILE(GLOB CURVE_EXTRACTION_EXAMPLE_FILES *.cpp)
FOREACH (EXAMPLE_FILE ${CURVE_EXTRACTION_EXAMPLE_FILES})
	GET_FILENAME_COMPONENT(EXAMPLE_NAME ${EXAMPLE_FILE} NAME_WE)
	MESSAGE("-- Adding example: " ${EXAMPLE_NAME})
	CURVE_EXTRACTION_EXAMPLE(${EXAMPLE_NAME})
ENDFOREACH()

